Fix print variant spacing

--- a/app/views/ReportView/components/GenomicSummary/components/VariantChips/index.scss
+++ b/app/views/ReportView/components/GenomicSummary/components/VariantChips/index.scss
@@ -43,6 +43,6 @@
 
 @media print {
   .variant {
-    margin: -2px;
+    margin: 2px;
   }
 }
